Saved the cleaned and pre processed data

--- a/data_cleaning_pre_processing.ipynb
+++ b/data_cleaning_pre_processing.ipynb
@@ -2924,6 +2924,24 @@
     "plt.title(\"Correlation Heatmap\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7264f24",
+   "metadata": {},
+   "source": [
+    "##### Save the cleaned data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "c4d522d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('cleaned_new_train_data.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
