explained  further details in the report

--- a/Project3_Report.ipynb
+++ b/Project3_Report.ipynb
@@ -35,18 +35,18 @@
     "**Best Parameters:** {'solver': 'liblinear', 'penalty': 'l1', 'C': 0.078}\n",
     "\n",
     "**Validation Metrics:**\n",
-    "- Accuracy: 0.878\\n\n",
-    "- Precision: 0.869\\n\n",
-    "- Recall: 0.847\\n\n",
-    "- F1: 0.858\\n\n",
-    "- AUC: 0.95\\n\n",
+    "- Accuracy: 0.878\n",
+    "- Precision: 0.869\n",
+    "- Recall: 0.847\n",
+    "- F1: 0.858\n",
+    "- AUC: 0.95\n",
     "\n",
-    "**Test Metrics:** \\n\n",
-    "- Accuracy: 0.872\\n\n",
-    "- Precision: 0.866\\n\n",
-    "- Recall: 0.833\\n\n",
-    "- F1: 0.849\\n\n",
-    "- AUC: 0.94\\n\n",
+    "**Test Metrics:** \n",
+    "- Accuracy: 0.872\n",
+    "- Precision: 0.866\n",
+    "- Recall: 0.833\n",
+    "- F1: 0.849\n",
+    "- AUC: 0.94\n",
     "\n",
     "### Top Logistic Regression Coefficients to identify interactive features\n",
     "- Positive: x25_LC, x14, x17, x20, x18, x9\n",
@@ -75,18 +75,18 @@
     "*** Feature engineering (interaction + log transforms for Part A)\n",
     "\n",
     "**Validation Metrics:**\n",
-    "- Accuracy: 0.880\\n\n",
-    "- Precision: 0.873\\n\n",
-    "- Recall: 0.848\\n\n",
-    "- F1: 0.860\\n\n",
-    "- AUC: 0.95\\n\n",
+    "- Accuracy: 0.880\n",
+    "- Precision: 0.873\n",
+    "- Recall: 0.848\n",
+    "- F1: 0.860\n",
+    "- AUC: 0.95\n",
     "\n",
-    "**Test Metrics:** \\n\n",
-    "- Accuracy: 0.873\\n\n",
-    "- Precision: 0.866\\n\n",
-    "- Recall: 0.833\\n\n",
-    "- F1: 0.850\\n\n",
-    "- AUC: 0.94\\n\n",
+    "**Test Metrics:**\n",
+    "- Accuracy: 0.873\n",
+    "- Precision: 0.866\n",
+    "- Recall: 0.833\n",
+    "- F1: 0.850\n",
+    "- AUC: 0.94\n",
     "\n",
     "- It can be seen the validation metrics like accuracy and F1 slightly improved while for test metrics it only improved by 0.001.The ROC-AUC didn't had any significant changes.\n",
     "\n",
@@ -94,19 +94,22 @@
     "Here I decided to go with random forest classifier, hyperparameter using randomsearchedCV.\n",
     "**Best Parameters:** class_weight='balanced', max_features=0.7, min_samples_leaf=2, min_samples_split=10, n_estimators=400\n",
     "\n",
-    "**Validation Metrics:**\\n\n",
-    "- Accuracy: 0.964\\n\n",
-    "- Precision: 0.970\\n\n",
-    "- Recall: 0.946\\n\n",
-    "- F1: 0.958\\n\n",
-    "- AUC: 0.99\\n\n",
+    "**Validation Metrics:**\n",
+    "- Accuracy: 0.964\n",
+    "- Precision: 0.970\n",
+    "- Recall: 0.946\n",
+    "- F1: 0.958\n",
+    "- AUC: 0.99\n",
     "\n",
-    "**Test Metrics:**\\n\n",
-    "- Accuracy: 0.962\\n\n",
-    "- Precision: 0.969\\n\n",
-    "- Recall: 0.942\\n\n",
-    "- F1: 0.955\\n\n",
-    "- AUC: 0.99\\n\n",
+    "**Test Metrics:**\n",
+    "- Accuracy: 0.962\n",
+    "- Precision: 0.969\n",
+    "- Recall: 0.942\n",
+    "- F1: 0.955\n",
+    "- AUC: 0.99\n",
+    "\n",
+    "Before tuning, the Random Forest showed signs of overfitting with a perfect training AUC of 1.00, while validation and test AUC were 0.99. After tuning the hyperparameters using randomsearchcv such as limiting tree depth, increasing the minimum samples per leaf, and adjusting the number of features per split the training AUC slightly decreased to 0.996, but the validation and test AUC remained at 0.99.\n",
+    "This indicates that the tuning successfully reduced overfitting without affecting generalization performance. The final model is more stable and less complex, yet retains the same predictive accuracy.\n",
     "\n",
     "### Top Random Forest Features\n",
     "- x14, x9, x26_PT, x28, x16, x25_LC, x5, x20, x18, x29\n",
@@ -209,14 +212,17 @@
     "\n",
     "The small gap indicates excellent generalization with minimal overfitting.\n",
     "\n",
+    "In terms of business friendly\n",
+    "\n",
+    "“The tree based random classifier model finds the correct cases more reliably.”\n",
+    "\n",
+    "“It reduces false decisions, saving money and improving efficiency.”\n",
+    "\n",
+    "“It adapts to more complex patterns, which the simpler model could not detect.”\n",
+    "\n",
     "### 6. Conclusion\n",
     "Random Forest significantly outperforms Logistic Regression on all metrics, showing excellent generalization and robustness after hyperparameter tuning.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
