--- a/Project3_Report.ipynb
+++ b/Project3_Report.ipynb
@@ -52,7 +52,7 @@
     "- Positive: x25_LC, x14, x17, x20, x18, x9\n",
     "- Negative: x26_PT, x4, x28\n",
     "\n",
-    "-In addition to standard preprocessing and scaling, I explored interaction features to help logistic regression capture relationships that are not purely linear. Logistic regression by itself assumes additive effects, meaning each feature contributes independently to the log-odds. However, in many real-world datasets, the effect of one variable may depend on the value of another variable.\n",
+    "- In addition to standard preprocessing and scaling, I explored interaction features to help logistic regression capture relationships that are not purely linear. Logistic regression by itself assumes additive effects, meaning each feature contributes independently to the log-odds. However, in many real-world datasets, the effect of one variable may depend on the value of another variable.\n",
     "\n",
     "To capture such dependencies, I created a set of pairwise interaction terms between the continuous variables:\n",
     "\n",
@@ -72,7 +72,7 @@
     "\n",
     "“The effect of x5 may only be visible when combined with x23.”\n",
     "\n",
-    "*** Feature engineering (interaction + log transforms for Part A)\n",
+    "*** Feature engineering (interaction + log transforms for Part A) ***\n",
     "\n",
     "**Validation Metrics:**\n",
     "- Accuracy: 0.880\n",
@@ -92,6 +92,7 @@
     "\n",
     "### 4. Part B — Random Forest Classifier\n",
     "Here I decided to go with random forest classifier, hyperparameter using randomsearchedCV.\n",
+    "\n",
     "**Best Parameters:** class_weight='balanced', max_features=0.7, min_samples_leaf=2, min_samples_split=10, n_estimators=400\n",
     "\n",
     "**Validation Metrics:**\n",
@@ -108,7 +109,7 @@
     "- F1: 0.955\n",
     "- AUC: 0.99\n",
     "\n",
-    "Before tuning, the Random Forest showed signs of overfitting with a perfect training AUC of 1.00, while validation and test AUC were 0.99. After tuning the hyperparameters using randomsearchcv such as limiting tree depth, increasing the minimum samples per leaf, and adjusting the number of features per split the training AUC slightly decreased to 0.996, but the validation and test AUC remained at 0.99.\n",
+    "Before tuning, the Random Forest showed signs of overfitting with a perfect training AUC of 1.00, while validation and test AUC were 0.99. After tuning the hyperparameters using RandomizedSearchCV such as limiting tree depth, increasing the minimum samples per leaf, and adjusting the number of features per split the training AUC slightly decreased to 0.996, but the validation and test AUC remained at 0.99.\n",
     "This indicates that the tuning successfully reduced overfitting without affecting generalization performance. The final model is more stable and less complex, yet retains the same predictive accuracy.\n",
     "\n",
     "### Top Random Forest Features\n",
@@ -183,14 +184,10 @@
     "\n",
     "Logistic Regression assumes a linear relationship between each feature and the outcome.\n",
     "Random Forest does not—it automatically learns:\n",
-    "\n",
-    "nonlinear trends\n",
-    "\n",
-    "thresholds\n",
-    "\n",
-    "interactions between features\n",
-    "\n",
-    "This gives it a major advantage on complex datasets.\n",
+    "-nonlinear trends\n",
+    "-thresholds\n",
+    "-interactions between features\n",
+    "-This gives it a major advantage on complex datasets.\n",
     "\n",
     "2. Handles Feature Interactions Automatically\n",
     "\n",
