modification to report

--- a/Project3_Report.ipynb
+++ b/Project3_Report.ipynb
@@ -16,10 +16,10 @@
     "- Removing unwanted characters like ## % _ etc \n",
     "- Dropping irrelevant columns which were either empty or represented just as column ids which did not give any useful information.\n",
     "- Handled missing data (either nan or inf) with the median for the numeric columns and mode for categorical columns.\n",
-    "- Dummy (pd.get_dummies) encoding categorical variables for object cols identified from .info. As well as converted the numeric looking cols to numeric type.\n",
+    "- Dummy (pd.get_dummies) encoding categorical variables for object cols identified from .info as well as converted the numeric looking cols to numeric type.\n",
     "- Removed highly correlated columns over 0.8\n",
     "- Created quantile bins after identifying continuous variable cols by checking no.of unique values in each col.\n",
-    "- Created few visulation to check the correlation of the clean df, used the heatmap to visualize the null values, analysis for continuous variable in the col, box plot to detect outliers.\n",
+    "- Created few visulation to check the correlation of the clean df, used the heatmap to visualize the null values, analysis for continuous variable in the col, box plot to detect outliers in the numeric cols\n",
     "- Saved the clean data as csv file in the name : \"cleaned_new_train_data.csv\"\n",
     "\n",
     "### 3. Part A — Logistic Regression Model\n",
@@ -220,6 +220,11 @@
     "### 6. Conclusion\n",
     "Random Forest significantly outperforms Logistic Regression on all metrics, showing excellent generalization and robustness after hyperparameter tuning.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
