--- a/Project3_Report.ipynb
+++ b/Project3_Report.ipynb
@@ -23,7 +23,7 @@
     "- Saved the clean data as csv file in the name : \"cleaned_new_train_data.csv\"\n",
     "\n",
     "### 3. Part A — Logistic Regression Model\n",
-    "- logistic regression model showed stable performance with or without hyperparameter tuning. The validation accuracy, F1-score, and AUC remained essentially unchanged before and after applying RandomizedSearchCV\n",
+    "- logistic regression model showed stable performance with or without hyperparameter tuning. The validation accuracy, F1 score, and AUC remained essentially unchanged before and after applying RandomizedSearchCV\n",
     "This indicates that:\n",
     "The dataset is well suited for logistic regression\n",
     "The model is not highly sensitive to the choice of regularization strength (C)\n",
@@ -52,7 +52,7 @@
     "- Positive: x25_LC, x14, x17, x20, x18, x9\n",
     "- Negative: x26_PT, x4, x28\n",
     "\n",
-    "- In addition to standard preprocessing and scaling, I explored interaction features to help logistic regression capture relationships that are not purely linear. Logistic regression by itself assumes additive effects, meaning each feature contributes independently to the log-odds. However, in many real-world datasets, the effect of one variable may depend on the value of another variable.\n",
+    "- In addition to standard preprocessing and scaling, I explored interaction features to help logistic regression capture relationships that are not purely linear. Logistic regression by itself assumes additive effects, meaning each feature contributes independently to the log odds. However, in many real world datasets, the effect of one variable may depend on the value of another variable.\n",
     "\n",
     "To capture such dependencies, I created a set of pairwise interaction terms between the continuous variables:\n",
     "\n",
@@ -91,7 +91,7 @@
     "- It can be seen the validation metrics like accuracy and F1 slightly improved while for test metrics it only improved by 0.001.The ROC-AUC didn't had any significant changes.\n",
     "\n",
     "### 4. Part B — Random Forest Classifier\n",
-    "Here I decided to go with random forest classifier, hyperparameter using randomsearchedCV.\n",
+    "Here I decided to go with random forest classifier, hyperparameter using randomizedsearchedCV.\n",
     "\n",
     "**Best Parameters:** class_weight='balanced', max_features=0.7, min_samples_leaf=2, min_samples_split=10, n_estimators=400\n",
     "\n",
@@ -174,6 +174,14 @@
     "| Test AUC | 0.94 | 0.99 |\n",
     "| Test Accuracy | 0.873 | 0.962 |\n",
     "| Test F1 | 0.850 | 0.955 |\n",
+    "\n",
+    "-------------------------\n",
+    "\n",
+    "| Metric | Logistic Regression | Random Forest |\n",
+    "|--------|--------------------|---------------|\n",
+    "| Train AUC | 0.95 | 0.9996 |\n",
+    "| Validation AUC | 0.95 | 0.99 |\n",
+    "| Test AUC | 0.94 | 0.99 |\n",
     "\n",
     "Random Forest performs substantially better than Logistic Regression across every metric.\n",
     "The improvement is especially large in Recall, F1 Score, and overall accuracy.\n",
