formatting to report

--- a/Project3_Report.ipynb
+++ b/Project3_Report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PROJECT 3 — MACHINE LEARNING MODELING REPORT\n",
     "## Part A: Logistic Regression\n",
-    "## Part B: Random Forest Claasifier (Non-Logistic Model)\n",
+    "## Part B: Random Forest Classifier (Non-Logistic Model)\n",
     "\n",
     "### 1. Introduction\n",
     "The objective of this project is to build and evaluate predictive models using a cleaned and pre processed dataset.The modeling process is divided into two stages: Logistic Regression (Part A) where I used feature engineering to try to  improve the ROC-AUC score as well as the accuracy and the F1 score and a more advanced non-logistic model (Random Forest, Part B).\n",
@@ -67,12 +67,10 @@
     "x5_x29 = x5 * x29\n",
     "\n",
     "These products allow the logistic model to understand patterns like:\n",
+    "When x23 is high and x29 is high, the risk increases more sharply.\n",
+    "The effect of x5 may only be visible when combined with x23.”\n",
     "\n",
-    "“When x23 is high and x29 is high, the risk increases more sharply.”\n",
-    "\n",
-    "“The effect of x5 may only be visible when combined with x23.”\n",
-    "\n",
-    "*** Feature engineering (interaction + log transforms for Part A) ***\n",
+    "***Feature engineering (interaction + log transforms for Part A)***\n",
     "\n",
     "**Validation Metrics:**\n",
     "- Accuracy: 0.880\n",
@@ -175,7 +173,7 @@
     "| Test Accuracy | 0.873 | 0.962 |\n",
     "| Test F1 | 0.850 | 0.955 |\n",
     "\n",
-    "-------------------------\n",
+    "--------------\n",
     "\n",
     "| Metric | Logistic Regression | Random Forest |\n",
     "|--------|--------------------|---------------|\n",
@@ -228,11 +226,6 @@
     "### 6. Conclusion\n",
     "Random Forest significantly outperforms Logistic Regression on all metrics, showing excellent generalization and robustness after hyperparameter tuning.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
